piga-systrans/selaudit/parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Unused terminals:

    GENFSCON
    SID
    PIRQCON
    FS_USE_TRANS
    TYPEALIAS
    OPT_POLICY
    PATH
    PCIDEVICECON
    TUNABLE_POLICY
    IOPORTCON
    NODECON
    ROLE_TRANSITION
    FS_USE_XATTR
    IOMEMCON
    INTERFACE
    TYPEATTRIBUTE
    ELSE
    IF
    NETIFCON
    GEN_CONTEXT
    FS_USE_TASK
    TEMPLATE
    IFDEF
    IFNDEF
    PORTCON
    RANGE_TRANSITION
    IFELSE

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement
Rule 2     statements -> statements statement
Rule 3     statements -> empty
Rule 4     statement -> policy_module
Rule 5     statement -> module
Rule 6     statement -> policy
Rule 7     statement -> obj_perm_set
Rule 8     statement -> refpolicywarn
Rule 9     empty -> <empty>
Rule 10    refpolicywarn -> REFPOLICYWARN LPAREN TICK TEXT SQUOTE RPAREN
Rule 11    obj_perm_set -> DEFINE LPAREN TICK identifier SQUOTE COMMA TICK names SQUOTE RPAREN
Rule 12    obj_perm_set -> DEFINE LPAREN TICK identifier SQUOTE COMMA TICK names refpolicywarn SQUOTE RPAREN
Rule 13    policy -> policy_stmt
Rule 14    policy_module -> POLICY_MODULE LPAREN identifier COMMA number RPAREN
Rule 15    module -> MODULE identifier number SEMI
Rule 16    policy_stmt -> gen_require
Rule 17    policy_stmt -> rule_def
Rule 18    policy_stmt -> type_rule_def
Rule 19    policy_stmt -> interface_call
Rule 20    policy_stmt -> define
Rule 21    policy_stmt -> role_def
Rule 22    policy_stmt -> type_def
Rule 23    policy_stmt -> permissive
Rule 24    gen_require -> GEN_REQ LBRACE TICK requires SQUOTE RBRACE
Rule 25    gen_require -> REQUIRE LBRACE requires RBRACE
Rule 26    requires -> require
Rule 27    requires -> requires require
Rule 28    require -> TYPE comma_list SEMI
Rule 29    require -> ROLE comma_list SEMI
Rule 30    require -> ATTRIBUTE comma_list SEMI
Rule 31    require -> CLASS comma_list SEMI
Rule 32    require -> BOOL comma_list SEMI
Rule 33    role_def -> ROLE identifier TYPES comma_list SEMI
Rule 34    role_def -> ROLE identifier SEMI
Rule 35    permissive -> PERMISSIVE comma_list SEMI
Rule 36    type_def -> TYPE identifier COMMA comma_list SEMI
Rule 37    type_def -> TYPE identifier SEMI
Rule 38    type_def -> TYPE identifier ALIAS names SEMI
Rule 39    type_def -> TYPE identifier ALIAS names COMMA comma_list SEMI
Rule 40    rule_def -> rule_allow_def
Rule 41    rule_def -> rule_deny_def
Rule 42    rule_def -> rule_audit_def
Rule 43    rule_def -> rule_dontaudit_def
Rule 44    rule_allow_def -> ALLOW names names COLON names names SEMI
Rule 45    rule_deny_def -> NEVERALLOW names names COLON names names SEMI
Rule 46    rule_audit_def -> AUDITALLOW names names COLON names names SEMI
Rule 47    rule_dontaudit_def -> DONTAUDIT names names COLON names names SEMI
Rule 48    type_rule_def -> type_rule_transition_def
Rule 49    type_rule_def -> type_rule_change_def
Rule 50    type_rule_def -> type_rule_member_def
Rule 51    type_rule_transition_def -> TYPE_TRANSITION names names COLON names identifier SEMI
Rule 52    type_rule_change_def -> TYPE_CHANGE names names COLON names identifier SEMI
Rule 53    type_rule_member_def -> TYPE_MEMBER names names COLON names identifier SEMI
Rule 54    interface_call -> identifier LPAREN interface_call_param_list RPAREN
Rule 55    interface_call -> identifier LPAREN RPAREN
Rule 56    interface_call -> identifier LPAREN interface_call_param_list RPAREN SEMI
Rule 57    define -> DEFINE RPAREN TICK identifier SQUOTE LPAREN
Rule 58    names -> identifier
Rule 59    names -> nested_id_set
Rule 60    names -> asterisk
Rule 61    names -> TILDE identifier
Rule 62    names -> TILDE nested_id_set
Rule 63    names -> identifier MINUS identifier
Rule 64    comma_list -> nested_id_list
Rule 65    comma_list -> comma_list COMMA nested_id_list
Rule 66    nested_id_set -> LBRACE nested_id_list RBRACE
Rule 67    nested_id_list -> nested_id_element
Rule 68    nested_id_list -> nested_id_list nested_id_element
Rule 69    nested_id_element -> identifier
Rule 70    nested_id_element -> MINUS identifier
Rule 71    nested_id_element -> nested_id_set
Rule 72    interface_call_param_list -> interface_call_param
Rule 73    interface_call_param_list -> interface_call_param_list COMMA interface_call_param
Rule 74    interface_call_param -> identifier
Rule 75    interface_call_param -> identifier MINUS identifier
Rule 76    interface_call_param -> nested_id_set
Rule 77    interface_call_param -> TRUE
Rule 78    interface_call_param -> FALSE
Rule 79    sign -> MINUS
Rule 80    sign -> TILDE
Rule 81    sign -> AMP
Rule 82    sign -> pipe
Rule 83    sign -> equal
Rule 84    sign -> punctuation_mark
Rule 85    sign -> asterisk
Rule 86    sign -> bracket
Rule 87    number -> NUMBER
Rule 88    identifier -> IDENTIFIER
Rule 89    asterisk -> ASTERISK
Rule 90    equal -> EQUAL
Rule 91    pipe -> BAR
Rule 92    bracket -> LBRACE
Rule 93    bracket -> RBRACE
Rule 94    bracket -> LPAREN
Rule 95    bracket -> RPAREN
Rule 96    punctuation_mark -> SEMI
Rule 97    punctuation_mark -> COLON
Rule 98    punctuation_mark -> COMMA
Rule 99    punctuation_mark -> EXPL
Rule 100   punctuation_mark -> POINT

Terminals, with rules where they appear

ALIAS                : 38 39
ALLOW                : 44
AMP                  : 81
ASTERISK             : 89
ATTRIBUTE            : 30
AUDITALLOW           : 46
BAR                  : 91
BOOL                 : 32
CLASS                : 31
COLON                : 44 45 46 47 51 52 53 97
COMMA                : 11 12 14 36 39 65 73 98
DEFINE               : 11 12 57
DONTAUDIT            : 47
ELSE                 : 
EQUAL                : 90
EXPL                 : 99
FALSE                : 78
FS_USE_TASK          : 
FS_USE_TRANS         : 
FS_USE_XATTR         : 
GENFSCON             : 
GEN_CONTEXT          : 
GEN_REQ              : 24
IDENTIFIER           : 88
IF                   : 
IFDEF                : 
IFELSE               : 
IFNDEF               : 
INTERFACE            : 
IOMEMCON             : 
IOPORTCON            : 
LBRACE               : 24 25 66 92
LPAREN               : 10 11 12 14 54 55 56 57 94
MINUS                : 63 70 75 79
MODULE               : 15
NETIFCON             : 
NEVERALLOW           : 45
NODECON              : 
NUMBER               : 87
OPT_POLICY           : 
PATH                 : 
PCIDEVICECON         : 
PERMISSIVE           : 35
PIRQCON              : 
POINT                : 100
POLICY_MODULE        : 14
PORTCON              : 
RANGE_TRANSITION     : 
RBRACE               : 24 25 66 93
REFPOLICYWARN        : 10
REQUIRE              : 25
ROLE                 : 29 33 34
ROLE_TRANSITION      : 
RPAREN               : 10 11 12 14 54 55 56 57 95
SEMI                 : 15 28 29 30 31 32 33 34 35 36 37 38 39 44 45 46 47 51 52 53 56 96
SID                  : 
SQUOTE               : 10 11 11 12 12 24 57
TEMPLATE             : 
TEXT                 : 10
TICK                 : 10 11 11 12 12 24 57
TILDE                : 61 62 80
TRUE                 : 77
TUNABLE_POLICY       : 
TYPE                 : 28 36 37 38 39
TYPEALIAS            : 
TYPEATTRIBUTE        : 
TYPES                : 33
TYPE_CHANGE          : 52
TYPE_MEMBER          : 53
TYPE_TRANSITION      : 51
error                : 

Nonterminals, with rules where they appear

asterisk             : 60 85
bracket              : 86
comma_list           : 28 29 30 31 32 33 35 36 39 65
define               : 20
empty                : 3
equal                : 83
gen_require          : 16
identifier           : 11 12 14 15 33 34 36 37 38 39 51 52 53 54 55 56 57 58 61 63 63 69 70 74 75 75
interface_call       : 19
interface_call_param : 72 73
interface_call_param_list : 54 56 73
module               : 5
names                : 11 12 38 39 44 44 44 44 45 45 45 45 46 46 46 46 47 47 47 47 51 51 51 52 52 52 53 53 53
nested_id_element    : 67 68
nested_id_list       : 64 65 66 68
nested_id_set        : 59 62 71 76
number               : 14 15
obj_perm_set         : 7
permissive           : 23
pipe                 : 82
policy               : 6
policy_module        : 4
policy_stmt          : 13
punctuation_mark     : 84
refpolicywarn        : 8 12
require              : 26 27
requires             : 24 25 27
role_def             : 21
rule_allow_def       : 40
rule_audit_def       : 42
rule_def             : 17
rule_deny_def        : 41
rule_dontaudit_def   : 43
sign                 : 
statement            : 1 2
statements           : 2 0
type_def             : 22
type_rule_change_def : 49
type_rule_def        : 18
type_rule_member_def : 50
type_rule_transition_def : 48

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement
    (2) statements -> . statements statement
    (3) statements -> . empty
    (4) statement -> . policy_module
    (5) statement -> . module
    (6) statement -> . policy
    (7) statement -> . obj_perm_set
    (8) statement -> . refpolicywarn
    (9) empty -> .
    (14) policy_module -> . POLICY_MODULE LPAREN identifier COMMA number RPAREN
    (15) module -> . MODULE identifier number SEMI
    (13) policy -> . policy_stmt
    (11) obj_perm_set -> . DEFINE LPAREN TICK identifier SQUOTE COMMA TICK names SQUOTE RPAREN
    (12) obj_perm_set -> . DEFINE LPAREN TICK identifier SQUOTE COMMA TICK names refpolicywarn SQUOTE RPAREN
    (10) refpolicywarn -> . REFPOLICYWARN LPAREN TICK TEXT SQUOTE RPAREN
    (16) policy_stmt -> . gen_require
    (17) policy_stmt -> . rule_def
    (18) policy_stmt -> . type_rule_def
    (19) policy_stmt -> . interface_call
    (20) policy_stmt -> . define
    (21) policy_stmt -> . role_def
    (22) policy_stmt -> . type_def
    (23) policy_stmt -> . permissive
    (24) gen_require -> . GEN_REQ LBRACE TICK requires SQUOTE RBRACE
    (25) gen_require -> . REQUIRE LBRACE requires RBRACE
    (40) rule_def -> . rule_allow_def
    (41) rule_def -> . rule_deny_def
    (42) rule_def -> . rule_audit_def
    (43) rule_def -> . rule_dontaudit_def
    (48) type_rule_def -> . type_rule_transition_def
    (49) type_rule_def -> . type_rule_change_def
    (50) type_rule_def -> . type_rule_member_def
    (54) interface_call -> . identifier LPAREN interface_call_param_list RPAREN
    (55) interface_call -> . identifier LPAREN RPAREN
    (56) interface_call -> . identifier LPAREN interface_call_param_list RPAREN SEMI
    (57) define -> . DEFINE RPAREN TICK identifier SQUOTE LPAREN
    (33) role_def -> . ROLE identifier TYPES comma_list SEMI
    (34) role_def -> . ROLE identifier SEMI
    (36) type_def -> . TYPE identifier COMMA comma_list SEMI
    (37) type_def -> . TYPE identifier SEMI
    (38) type_def -> . TYPE identifier ALIAS names SEMI
    (39) type_def -> . TYPE identifier ALIAS names COMMA comma_list SEMI
    (35) permissive -> . PERMISSIVE comma_list SEMI
    (44) rule_allow_def -> . ALLOW names names COLON names names SEMI
    (45) rule_deny_def -> . NEVERALLOW names names COLON names names SEMI
    (46) rule_audit_def -> . AUDITALLOW names names COLON names names SEMI
    (47) rule_dontaudit_def -> . DONTAUDIT names names COLON names names SEMI
    (51) type_rule_transition_def -> . TYPE_TRANSITION names names COLON names identifier SEMI
    (52) type_rule_change_def -> . TYPE_CHANGE names names COLON names identifier SEMI
    (53) type_rule_member_def -> . TYPE_MEMBER names names COLON names identifier SEMI
    (88) identifier -> . IDENTIFIER

  ! shift/reduce conflict for POLICY_MODULE resolved as shift
  ! shift/reduce conflict for MODULE resolved as shift
  ! shift/reduce conflict for DEFINE resolved as shift
  ! shift/reduce conflict for REFPOLICYWARN resolved as shift
  ! shift/reduce conflict for GEN_REQ resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for ROLE resolved as shift
  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for PERMISSIVE resolved as shift
  ! shift/reduce conflict for ALLOW resolved as shift
  ! shift/reduce conflict for NEVERALLOW resolved as shift
  ! shift/reduce conflict for AUDITALLOW resolved as shift
  ! shift/reduce conflict for DONTAUDIT resolved as shift
  ! shift/reduce conflict for TYPE_TRANSITION resolved as shift
  ! shift/reduce conflict for TYPE_CHANGE resolved as shift
  ! shift/reduce conflict for TYPE_MEMBER resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
    $end            reduce using rule 9 (empty -> .)
    POLICY_MODULE   shift and go to state 39
    MODULE          shift and go to state 27
    DEFINE          shift and go to state 22
    REFPOLICYWARN   shift and go to state 1
    GEN_REQ         shift and go to state 23
    REQUIRE         shift and go to state 4
    ROLE            shift and go to state 37
    TYPE            shift and go to state 35
    PERMISSIVE      shift and go to state 15
    ALLOW           shift and go to state 3
    NEVERALLOW      shift and go to state 7
    AUDITALLOW      shift and go to state 24
    DONTAUDIT       shift and go to state 13
    TYPE_TRANSITION shift and go to state 31
    TYPE_CHANGE     shift and go to state 32
    TYPE_MEMBER     shift and go to state 11
    IDENTIFIER      shift and go to state 20

  ! POLICY_MODULE   [ reduce using rule 9 (empty -> .) ]
  ! MODULE          [ reduce using rule 9 (empty -> .) ]
  ! DEFINE          [ reduce using rule 9 (empty -> .) ]
  ! REFPOLICYWARN   [ reduce using rule 9 (empty -> .) ]
  ! GEN_REQ         [ reduce using rule 9 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 9 (empty -> .) ]
  ! ROLE            [ reduce using rule 9 (empty -> .) ]
  ! TYPE            [ reduce using rule 9 (empty -> .) ]
  ! PERMISSIVE      [ reduce using rule 9 (empty -> .) ]
  ! ALLOW           [ reduce using rule 9 (empty -> .) ]
  ! NEVERALLOW      [ reduce using rule 9 (empty -> .) ]
  ! AUDITALLOW      [ reduce using rule 9 (empty -> .) ]
  ! DONTAUDIT       [ reduce using rule 9 (empty -> .) ]
  ! TYPE_TRANSITION [ reduce using rule 9 (empty -> .) ]
  ! TYPE_CHANGE     [ reduce using rule 9 (empty -> .) ]
  ! TYPE_MEMBER     [ reduce using rule 9 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 9 (empty -> .) ]

    statements                     shift and go to state 2
    module                         shift and go to state 5
    role_def                       shift and go to state 38
    policy_stmt                    shift and go to state 8
    rule_allow_def                 shift and go to state 9
    type_rule_change_def           shift and go to state 10
    type_rule_transition_def       shift and go to state 14
    refpolicywarn                  shift and go to state 12
    type_rule_member_def           shift and go to state 41
    rule_dontaudit_def             shift and go to state 16
    rule_audit_def                 shift and go to state 19
    statement                      shift and go to state 17
    policy                         shift and go to state 18
    empty                          shift and go to state 21
    define                         shift and go to state 28
    obj_perm_set                   shift and go to state 25
    permissive                     shift and go to state 26
    interface_call                 shift and go to state 29
    gen_require                    shift and go to state 30
    type_def                       shift and go to state 33
    type_rule_def                  shift and go to state 34
    rule_deny_def                  shift and go to state 36
    policy_module                  shift and go to state 6
    identifier                     shift and go to state 40
    rule_def                       shift and go to state 42

state 1

    (10) refpolicywarn -> REFPOLICYWARN . LPAREN TICK TEXT SQUOTE RPAREN

    LPAREN          shift and go to state 43


state 2

    (0) S' -> statements .
    (2) statements -> statements . statement
    (4) statement -> . policy_module
    (5) statement -> . module
    (6) statement -> . policy
    (7) statement -> . obj_perm_set
    (8) statement -> . refpolicywarn
    (14) policy_module -> . POLICY_MODULE LPAREN identifier COMMA number RPAREN
    (15) module -> . MODULE identifier number SEMI
    (13) policy -> . policy_stmt
    (11) obj_perm_set -> . DEFINE LPAREN TICK identifier SQUOTE COMMA TICK names SQUOTE RPAREN
    (12) obj_perm_set -> . DEFINE LPAREN TICK identifier SQUOTE COMMA TICK names refpolicywarn SQUOTE RPAREN
    (10) refpolicywarn -> . REFPOLICYWARN LPAREN TICK TEXT SQUOTE RPAREN
    (16) policy_stmt -> . gen_require
    (17) policy_stmt -> . rule_def
    (18) policy_stmt -> . type_rule_def
    (19) policy_stmt -> . interface_call
    (20) policy_stmt -> . define
    (21) policy_stmt -> . role_def
    (22) policy_stmt -> . type_def
    (23) policy_stmt -> . permissive
    (24) gen_require -> . GEN_REQ LBRACE TICK requires SQUOTE RBRACE
    (25) gen_require -> . REQUIRE LBRACE requires RBRACE
    (40) rule_def -> . rule_allow_def
    (41) rule_def -> . rule_deny_def
    (42) rule_def -> . rule_audit_def
    (43) rule_def -> . rule_dontaudit_def
    (48) type_rule_def -> . type_rule_transition_def
    (49) type_rule_def -> . type_rule_change_def
    (50) type_rule_def -> . type_rule_member_def
    (54) interface_call -> . identifier LPAREN interface_call_param_list RPAREN
    (55) interface_call -> . identifier LPAREN RPAREN
    (56) interface_call -> . identifier LPAREN interface_call_param_list RPAREN SEMI
    (57) define -> . DEFINE RPAREN TICK identifier SQUOTE LPAREN
    (33) role_def -> . ROLE identifier TYPES comma_list SEMI
    (34) role_def -> . ROLE identifier SEMI
    (36) type_def -> . TYPE identifier COMMA comma_list SEMI
    (37) type_def -> . TYPE identifier SEMI
    (38) type_def -> . TYPE identifier ALIAS names SEMI
    (39) type_def -> . TYPE identifier ALIAS names COMMA comma_list SEMI
    (35) permissive -> . PERMISSIVE comma_list SEMI
    (44) rule_allow_def -> . ALLOW names names COLON names names SEMI
    (45) rule_deny_def -> . NEVERALLOW names names COLON names names SEMI
    (46) rule_audit_def -> . AUDITALLOW names names COLON names names SEMI
    (47) rule_dontaudit_def -> . DONTAUDIT names names COLON names names SEMI
    (51) type_rule_transition_def -> . TYPE_TRANSITION names names COLON names identifier SEMI
    (52) type_rule_change_def -> . TYPE_CHANGE names names COLON names identifier SEMI
    (53) type_rule_member_def -> . TYPE_MEMBER names names COLON names identifier SEMI
    (88) identifier -> . IDENTIFIER

    POLICY_MODULE   shift and go to state 39
    MODULE          shift and go to state 27
    DEFINE          shift and go to state 22
    REFPOLICYWARN   shift and go to state 1
    GEN_REQ         shift and go to state 23
    REQUIRE         shift and go to state 4
    ROLE            shift and go to state 37
    TYPE            shift and go to state 35
    PERMISSIVE      shift and go to state 15
    ALLOW           shift and go to state 3
    NEVERALLOW      shift and go to state 7
    AUDITALLOW      shift and go to state 24
    DONTAUDIT       shift and go to state 13
    TYPE_TRANSITION shift and go to state 31
    TYPE_CHANGE     shift and go to state 32
    TYPE_MEMBER     shift and go to state 11
    IDENTIFIER      shift and go to state 20

    module                         shift and go to state 5
    role_def                       shift and go to state 38
    policy_stmt                    shift and go to state 8
    rule_allow_def                 shift and go to state 9
    type_rule_change_def           shift and go to state 10
    type_rule_transition_def       shift and go to state 14
    refpolicywarn                  shift and go to state 12
    type_rule_member_def           shift and go to state 41
    rule_dontaudit_def             shift and go to state 16
    rule_audit_def                 shift and go to state 19
    statement                      shift and go to state 44
    policy                         shift and go to state 18
    define                         shift and go to state 28
    obj_perm_set                   shift and go to state 25
    permissive                     shift and go to state 26
    interface_call                 shift and go to state 29
    gen_require                    shift and go to state 30
    type_def                       shift and go to state 33
    type_rule_def                  shift and go to state 34
    rule_deny_def                  shift and go to state 36
    policy_module                  shift and go to state 6
    identifier                     shift and go to state 40
    rule_def                       shift and go to state 42

state 3

    (44) rule_allow_def -> ALLOW . names names COLON names names SEMI
    (58) names -> . identifier
    (59) names -> . nested_id_set
    (60) names -> . asterisk
    (61) names -> . TILDE identifier
    (62) names -> . TILDE nested_id_set
    (63) names -> . identifier MINUS identifier
    (88) identifier -> . IDENTIFIER
    (66) nested_id_set -> . LBRACE nested_id_list RBRACE
    (89) asterisk -> . ASTERISK

    TILDE           shift and go to state 50
    IDENTIFIER      shift and go to state 20
    LBRACE          shift and go to state 48
    ASTERISK        shift and go to state 47

    nested_id_set                  shift and go to state 45
    identifier                     shift and go to state 51
    asterisk                       shift and go to state 46
    names                          shift and go to state 49

state 4

    (25) gen_require -> REQUIRE . LBRACE requires RBRACE

    LBRACE          shift and go to state 52


state 5

    (5) statement -> module .

    POLICY_MODULE   reduce using rule 5 (statement -> module .)
    MODULE          reduce using rule 5 (statement -> module .)
    DEFINE          reduce using rule 5 (statement -> module .)
    REFPOLICYWARN   reduce using rule 5 (statement -> module .)
    GEN_REQ         reduce using rule 5 (statement -> module .)
    REQUIRE         reduce using rule 5 (statement -> module .)
    ROLE            reduce using rule 5 (statement -> module .)
    TYPE            reduce using rule 5 (statement -> module .)
    PERMISSIVE      reduce using rule 5 (statement -> module .)
    ALLOW           reduce using rule 5 (statement -> module .)
    NEVERALLOW      reduce using rule 5 (statement -> module .)
    AUDITALLOW      reduce using rule 5 (statement -> module .)
    DONTAUDIT       reduce using rule 5 (statement -> module .)
    TYPE_TRANSITION reduce using rule 5 (statement -> module .)
    TYPE_CHANGE     reduce using rule 5 (statement -> module .)
    TYPE_MEMBER     reduce using rule 5 (statement -> module .)
    IDENTIFIER      reduce using rule 5 (statement -> module .)
    $end            reduce using rule 5 (statement -> module .)


state 6

    (4) statement -> policy_module .

    POLICY_MODULE   reduce using rule 4 (statement -> policy_module .)
    MODULE          reduce using rule 4 (statement -> policy_module .)
    DEFINE          reduce using rule 4 (statement -> policy_module .)
    REFPOLICYWARN   reduce using rule 4 (statement -> policy_module .)
    GEN_REQ         reduce using rule 4 (statement -> policy_module .)
    REQUIRE         reduce using rule 4 (statement -> policy_module .)
    ROLE            reduce using rule 4 (statement -> policy_module .)
    TYPE            reduce using rule 4 (statement -> policy_module .)
    PERMISSIVE      reduce using rule 4 (statement -> policy_module .)
    ALLOW           reduce using rule 4 (statement -> policy_module .)
    NEVERALLOW      reduce using rule 4 (statement -> policy_module .)
    AUDITALLOW      reduce using rule 4 (statement -> policy_module .)
    DONTAUDIT       reduce using rule 4 (statement -> policy_module .)
    TYPE_TRANSITION reduce using rule 4 (statement -> policy_module .)
    TYPE_CHANGE     reduce using rule 4 (statement -> policy_module .)
    TYPE_MEMBER     reduce using rule 4 (statement -> policy_module .)
    IDENTIFIER      reduce using rule 4 (statement -> policy_module .)
    $end            reduce using rule 4 (statement -> policy_module .)


state 7

    (45) rule_deny_def -> NEVERALLOW . names names COLON names names SEMI
    (58) names -> . identifier
    (59) names -> . nested_id_set
    (60) names -> . asterisk
    (61) names -> . TILDE identifier
    (62) names -> . TILDE nested_id_set
    (63) names -> . identifier MINUS identifier
    (88) identifier -> . IDENTIFIER
    (66) nested_id_set -> . LBRACE nested_id_list RBRACE
    (89) asterisk -> . ASTERISK

    TILDE           shift and go to state 50
    IDENTIFIER      shift and go to state 20
    LBRACE          shift and go to state 48
    ASTERISK        shift and go to state 47

    nested_id_set                  shift and go to state 45
    identifier                     shift and go to state 51
    asterisk                       shift and go to state 46
    names                          shift and go to state 53

state 8

    (13) policy -> policy_stmt .

    POLICY_MODULE   reduce using rule 13 (policy -> policy_stmt .)
    MODULE          reduce using rule 13 (policy -> policy_stmt .)
    DEFINE          reduce using rule 13 (policy -> policy_stmt .)
    REFPOLICYWARN   reduce using rule 13 (policy -> policy_stmt .)
    GEN_REQ         reduce using rule 13 (policy -> policy_stmt .)
    REQUIRE         reduce using rule 13 (policy -> policy_stmt .)
    ROLE            reduce using rule 13 (policy -> policy_stmt .)
    TYPE            reduce using rule 13 (policy -> policy_stmt .)
    PERMISSIVE      reduce using rule 13 (policy -> policy_stmt .)
    ALLOW           reduce using rule 13 (policy -> policy_stmt .)
    NEVERALLOW      reduce using rule 13 (policy -> policy_stmt .)
    AUDITALLOW      reduce using rule 13 (policy -> policy_stmt .)
    DONTAUDIT       reduce using rule 13 (policy -> policy_stmt .)
    TYPE_TRANSITION reduce using rule 13 (policy -> policy_stmt .)
    TYPE_CHANGE     reduce using rule 13 (policy -> policy_stmt .)
    TYPE_MEMBER     reduce using rule 13 (policy -> policy_stmt .)
    IDENTIFIER      reduce using rule 13 (policy -> policy_stmt .)
    $end            reduce using rule 13 (policy -> policy_stmt .)


state 9

    (40) rule_def -> rule_allow_def .

    POLICY_MODULE   reduce using rule 40 (rule_def -> rule_allow_def .)
    MODULE          reduce using rule 40 (rule_def -> rule_allow_def .)
    DEFINE          reduce using rule 40 (rule_def -> rule_allow_def .)
    REFPOLICYWARN   reduce using rule 40 (rule_def -> rule_allow_def .)
    GEN_REQ         reduce using rule 40 (rule_def -> rule_allow_def .)
    REQUIRE         reduce using rule 40 (rule_def -> rule_allow_def .)
    ROLE            reduce using rule 40 (rule_def -> rule_allow_def .)
    TYPE            reduce using rule 40 (rule_def -> rule_allow_def .)
    PERMISSIVE      reduce using rule 40 (rule_def -> rule_allow_def .)
    ALLOW           reduce using rule 40 (rule_def -> rule_allow_def .)
    NEVERALLOW      reduce using rule 40 (rule_def -> rule_allow_def .)
    AUDITALLOW      reduce using rule 40 (rule_def -> rule_allow_def .)
    DONTAUDIT       reduce using rule 40 (rule_def -> rule_allow_def .)
    TYPE_TRANSITION reduce using rule 40 (rule_def -> rule_allow_def .)
    TYPE_CHANGE     reduce using rule 40 (rule_def -> rule_allow_def .)
    TYPE_MEMBER     reduce using rule 40 (rule_def -> rule_allow_def .)
    IDENTIFIER      reduce using rule 40 (rule_def -> rule_allow_def .)
    $end            reduce using rule 40 (rule_def -> rule_allow_def .)


state 10

    (49) type_rule_def -> type_rule_change_def .

    POLICY_MODULE   reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    MODULE          reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    DEFINE          reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    REFPOLICYWARN   reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    GEN_REQ         reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    REQUIRE         reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    ROLE            reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    TYPE            reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    PERMISSIVE      reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    ALLOW           reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    NEVERALLOW      reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    AUDITALLOW      reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    DONTAUDIT       reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    TYPE_TRANSITION reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    TYPE_CHANGE     reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    TYPE_MEMBER     reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    IDENTIFIER      reduce using rule 49 (type_rule_def -> type_rule_change_def .)
    $end            reduce using rule 49 (type_rule_def -> type_rule_change_def .)


state 11

    (53) type_rule_member_def -> TYPE_MEMBER . names names COLON names identifier SEMI
    (58) names -> . identifier
    (59) names -> . nested_id_set
    (60) names -> . asterisk
    (61) names -> . TILDE identifier
    (62) names -> . TILDE nested_id_set
    (63) names -> . identifier MINUS identifier
    (88) identifier -> . IDENTIFIER
    (66) nested_id_set -> . LBRACE nested_id_list RBRACE
    (89) asterisk -> . ASTERISK

    TILDE           shift and go to state 50
    IDENTIFIER      shift and go to state 20
    LBRACE          shift and go to state 48
    ASTERISK        shift and go to state 47

    nested_id_set                  shift and go to state 45
    identifier                     shift and go to state 51
    asterisk                       shift and go to state 46
    names                          shift and go to state 54

state 12

    (8) statement -> refpolicywarn .

    POLICY_MODULE   reduce using rule 8 (statement -> refpolicywarn .)
    MODULE          reduce using rule 8 (statement -> refpolicywarn .)
    DEFINE          reduce using rule 8 (statement -> refpolicywarn .)
    REFPOLICYWARN   reduce using rule 8 (statement -> refpolicywarn .)
    GEN_REQ         reduce using rule 8 (statement -> refpolicywarn .)
    REQUIRE         reduce using rule 8 (statement -> refpolicywarn .)
    ROLE            reduce using rule 8 (statement -> refpolicywarn .)
    TYPE            reduce using rule 8 (statement -> refpolicywarn .)
    PERMISSIVE      reduce using rule 8 (statement -> refpolicywarn .)
    ALLOW           reduce using rule 8 (statement -> refpolicywarn .)
    NEVERALLOW      reduce using rule 8 (statement -> refpolicywarn .)
    AUDITALLOW      reduce using rule 8 (statement -> refpolicywarn .)
    DONTAUDIT       reduce using rule 8 (statement -> refpolicywarn .)
    TYPE_TRANSITION reduce using rule 8 (statement -> refpolicywarn .)
    TYPE_CHANGE     reduce using rule 8 (statement -> refpolicywarn .)
    TYPE_MEMBER     reduce using rule 8 (statement -> refpolicywarn .)
    IDENTIFIER      reduce using rule 8 (statement -> refpolicywarn .)
    $end            reduce using rule 8 (statement -> refpolicywarn .)


state 13

    (47) rule_dontaudit_def -> DONTAUDIT . names names COLON names names SEMI
    (58) names -> . identifier
    (59) names -> . nested_id_set
    (60) names -> . asterisk
    (61) names -> . TILDE identifier
    (62) names -> . TILDE nested_id_set
    (63) names -> . identifier MINUS identifier
    (88) identifier -> . IDENTIFIER
    (66) nested_id_set -> . LBRACE nested_id_list RBRACE
    (89) asterisk -> . ASTERISK

    TILDE           shift and go to state 50
    IDENTIFIER      shift and go to state 20
    LBRACE          shift and go to state 48
    ASTERISK        shift and go to state 47

    nested_id_set                  shift and go to state 45
    identifier                     shift and go to state 51
    asterisk                       shift and go to state 46
    names                          shift and go to state 55

state 14

    (48) type_rule_def -> type_rule_transition_def .
